--- a/resources/scss/home/_components/_card_hcard.scss
+++ b/resources/scss/home/_components/_card_hcard.scss
@@ -1,7 +1,6 @@
 @mixin h-card {
     .h-card {
         border: 1px solid rgb(183, 124, 189);
-        background: url('/_assets/media/main/bank-note.svg');
         background-color: snow;
         box-shadow: 10px 10px rgba(192, 138, 176, 0.521);
         height: min-content;
